--- a/public/styles/tweetGameStyle.css
+++ b/public/styles/tweetGameStyle.css
@@ -29,7 +29,12 @@ h1 {
   border-radius: 1rem;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
 
+  transition: filter 100ms ease-out, margin 200ms ease-out;
   position: relative;
+}
+
+.blurredTweet {
+  filter: blur(0.25rem);
 }
 /* icon & imena */
 .profileInfo {
@@ -117,7 +122,6 @@ h1 {
 .tweetImage {
   border-radius: 8px;
 }
-
 .createdAt {
   font-size: 0.9375rem;
 }
