trueFalse mode pocetna verzija

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
         </p>
       </div>
 
-      <div>
+      <div onclick="window.location.href = '/true-false-mode'">
         <h3 class="gamemodeTitle">True/false mode.</h3>
         <p class="gamemodeDescription">
           Decide if the user/tweet combo is correct. Only 1 tweet at a time. Go
