--- a/public/styles/homeStyle.css
+++ b/public/styles/homeStyle.css
@@ -51,3 +51,16 @@ h2 {
   font-size: 0.9375rem;
   line-height: 140%;
 }
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    text-align: center;
+    color: #fff;
+    font-size: 2.5rem;
+  }
+
+  .chooseGamemodeBody {
+    width: 90%;
+    border-radius: 0.5rem;
+  }
+}
