--- a/views/tweetGame.ejs
+++ b/views/tweetGame.ejs
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <h1>Tweeter game</h1>
+      <h1><a href="/">Tweeter game</a></h1>
     </header>
 
     <% if(tweets){ %>
