--- a/public/styles/registerStyle.css
+++ b/public/styles/registerStyle.css
@@ -13,6 +13,10 @@ header {
   padding: 1rem 0;
   margin-bottom: 5rem;
 }
+header a {
+  text-decoration: none;
+  color: inherit;
+}
 h1 {
   text-align: center;
   color: #fff;
@@ -59,6 +63,7 @@ input:focus {
 }
 #togglePasswordVisibility {
   cursor: pointer;
+  color: rgba(78, 171, 234, 0.5);
 }
 .errorMsg {
   margin-left: 1rem;
