--- a/views/trueFalseMode.ejs
+++ b/views/trueFalseMode.ejs
@@ -16,7 +16,7 @@
 
   <body>
     <header>
-      <h1>Tweeter game</h1>
+      <h1><a href="/">Tweeter game</a></h1>
     </header>
 
     <p class="score">
